--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ scale-info = { version = "2.11.3", default-features = false, features = [
 ] }
 libsecp256k1 = { version = "0.7.1", default-features = false }
 blst = { version = "0.3.13", default-features = false, optional = true }
+rsa = { version = "0.9.6", default-features = false, optional = true }
+blake2 = { version = "0.10.6", default-features = false, optional = true }
 sha3 = { version = "0.10.8", default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-3", default-features = false, optional = true }
 frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-3", default-features = false }
@@ -31,6 +33,8 @@ sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-st
 [dev-dependencies]
 hex-literal = "0.4.1"
 sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2407-3" }
+rsa = { version = "0.9.6", features = ["pem"] }
+rand = "0.8.5"
 
 [features]
 default = ["std"]
@@ -56,3 +60,10 @@ try-runtime = [
 bls = [
 	"dep:blst"
 ]
+rsa = [
+	"dep:rsa",
+	"dep:blake2"
+]
+
+[profile.release.package.num-bigint-dig]
+opt-level = 3
