Improve pallet description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pallet-otro"
 version = "0.0.1"
-description = "Simply pallet to provide smart accounts"
+description = "Simple pallet to provide smart accounts"
 authors = ["BlockDeep Labs <info@blockdeep.io>"]
 edition = "2021"
 license = "Apache-2.0"
