--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ scale-info = { version = "2.11.3", default-features = false, features = [
 	"derive",
 ] }
 libsecp256k1 = { version = "0.7.1", default-features = false }
-blst = { version = "0.3.13", default-features = false, optional = true }
 rsa = { version = "0.9.6", default-features = false, optional = true }
 blake2 = { version = "0.10.6", default-features = false, optional = true }
 sha3 = { version = "0.10.8", default-features = false }
@@ -46,6 +45,7 @@ std = [
 	"scale-info/std",
 	"sp-std/std",
 	"sp-core/std",
+	"sp-io/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
@@ -58,9 +58,9 @@ try-runtime = [
 	"sp-runtime/try-runtime",
 ]
 bls = [
-	"dep:blst"
+	"sp-io/bls-experimental",
 ]
 rsa = [
 	"dep:rsa",
-	"dep:blake2"
+	"dep:blake2",
 ]
